# CMC_MSU_RoomKeeper

./: .env.example  .gitignore  README.md  dodo.py  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  development.rst  index.rst  usage.rst
scripts/: download_schedule_pdfs.py  find_free_rooms.py  find_schedule_pdfs.py  import_schedule_to_db.py  init_db.py  parse_schedule.py  run_bot.py  show_db_stats.py  show_pdf_text_sample.py  update_schedule.py
src/roomkeeper/booking/: __init__.py  admin.py  bookings.py
src/roomkeeper/bot/: __init__.py  admin_access.py  admin_command.py  admin_handlers.py  app.py  book_command.py  config.py  free_command.py  handlers.py  helpers.py  lang_command.py  locale.py  user_bookings_command.py
src/roomkeeper/cli/: __init__.py  bot.py  db_stats.py  import_schedule.py  init_db.py  update_schedule.py
src/roomkeeper/db/: import_schedule.py  init_db.py  models.py  repository.py  session.py
src/roomkeeper/i18n/: __init__.py
src/roomkeeper/locales/en/LC_MESSAGES/: messages.po
src/roomkeeper/locales/ru/LC_MESSAGES/: messages.po
src/roomkeeper/parser/: models.py  pdf_text.py  rooms.py  schedule_parser.py  source_loader.py
src/roomkeeper/search/: __init__.py  free_rooms.py
tests/: conftest.py  test_booking_admin.py  test_booking_creation.py  test_bot_admin_command.py  test_bot_book_command.py  test_bot_config.py  test_bot_free_command.py  test_bot_user_bookings_command.py  test_cli.py  test_db_models.py  test_free_rooms.py  test_i18n.py  test_import_schedule.py  test_pdf_text.py  test_rooms.py  test_schedule_parser.py  test_source_loader.py  test_user_bookings.py
