[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-msu-roomkeeper"
version = "0.1.0"
description = "Telegram bot for finding and booking free classrooms at CMC MSU"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "CMC MSU RoomKeeper Team" }
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "pdfplumber",
    "sqlalchemy",
    "python-telegram-bot[socks]",
    "python-dotenv",
    "PySocks",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "doit",
    "build",
    "sphinx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.coverage.run]
source = ["src/roomkeeper"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[project.scripts]
roomkeeper-bot = "roomkeeper.cli.bot:main"
roomkeeper-init-db = "roomkeeper.cli.init_db:main"
roomkeeper-update-schedule = "roomkeeper.cli.update_schedule:main"
roomkeeper-import-schedule = "roomkeeper.cli.import_schedule:main"
roomkeeper-db-stats = "roomkeeper.cli.db_stats:main"